--- a/blogpost.html
+++ b/blogpost.html
@@ -12,6 +12,10 @@
             <h1>Este es el titulo atractivo e interesante del post</h1>
             <p>Y este es el parrafo de inicio donde vamos a explicar las consas 
                 increibles que se pueden hacer con ramas</p>
+            <p>Este blog es una prueba para practicar el merge, este parrafo no estaba
+                en la rama cabecera, solo en master, y ahora metere lo de la rama cabecera
+                aqui.
+            </p>
         </div>
     </div>
 </body>
