--- a/blogpost.html
+++ b/blogpost.html
@@ -18,9 +18,7 @@
                 increibles que se pueden hacer con ramas</p>
             <p>Este blog es una prueba para practicar el merge, este parrafo no estaba
                 en la rama cabecera, solo en master, y ahora metere lo de la rama cabecera
-                aqui.
-             donde vamos a explicar las consas 
-                increibles que se pueden hacer con ramas</p>
+                aqui.</p>
         </div>
     </div>
 </body>
