--- a/blogpost.html
+++ b/blogpost.html
@@ -16,7 +16,8 @@
             <h1>Este es el titulo atractivo e interesante del post</h1>
             <p>Y este es el parrafo de inicio donde vamos a explicar las consas 
                 increibles que se pueden hacer con ramas</p>
-        </div>
+                <p>Otro parrafo que no deberia generar conflicto</p>
+            </div>
     </div>
 </body>
 </html>
