--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
+            <img id="logo" src="imagenes/dragon.png"/>
             Bienvenido a Hyperblog 2.0
             <span id="tagline">Tu blog de confianza</span>
         </div>
@@ -20,6 +21,8 @@
                 en la rama cabecera, solo en master, y ahora metere lo de la rama cabecera
                 aqui.</p>
             <p>Otro parrafo que no deberia generar conflicto</p>
+
+
         </div>
     </div>
 </body>
