Corregido el error de la foto

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            <img id="logo" src="imagenes/dragon.png"/>
+            <img id="logo" src="imagenes/pululart.png"/>
             Bienvenido a Hyperblog 2.0
             <span id="tagline">Tu blog de confianza</span>
         </div>
@@ -21,8 +21,6 @@
                 en la rama cabecera, solo en master, y ahora metere lo de la rama cabecera
                 aqui.</p>
             <p>Otro parrafo que no deberia generar conflicto</p>
-
-
         </div>
     </div>
 </body>
