--- a/blogpost.html
+++ b/blogpost.html
@@ -19,7 +19,8 @@
             <p>Este blog es una prueba para practicar el merge, este parrafo no estaba
                 en la rama cabecera, solo en master, y ahora metere lo de la rama cabecera
                 aqui.</p>
-            <p>Otro parrafo que no deberia generar conflicto</p>
+            <p>Otro parrafo que no deberia generar conflicto.</p>
+            <footer>Este es el footer de nuestro blog.</footer>
         </div>
     </div>
 </body>
